tests/rustdoc-ui/issues/issue-79465.rs
pub fn f1<T>(x: T::A) {}
//~^ ERROR
